--- a/content/resources/08.md
+++ b/content/resources/08.md
@@ -1,12 +1,17 @@
 ---
 content_type: resource
 description: A cube-framed robot named Nemo.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/5df24d651158dcffcd51819bf4703f19_08.jpg
+file: /media/courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/5df24d651158dcffcd51819bf4703f19_08.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A cube-framed robot named Nemo.
   credit: 'Credit: Image courtesy of 2.00AJ Spring 2009 course staff.'
   image-alt: Two students with their robot and coiled-up tether.
+learning_resource_types:
+- Labs
+ocw_type: OCWImage
+parent_title: Labs
+parent_type: CourseSection
 resourcetype: Image
 title: 08.jpg
 uid: 5df24d65-1158-dcff-cd51-819bf4703f19
