--- a/content/resources/1.md
+++ b/content/resources/1.md
@@ -1,12 +1,16 @@
 ---
 content_type: resource
 description: Getting suited up.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/1b10f6088f5fbbd481947062a997a58d_1.jpeg
+file: /media/courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/1b10f6088f5fbbd481947062a997a58d_1.jpeg
 file_type: image/jpeg
 image_metadata:
   caption: Getting suited up.
   credit: Image courtesy of 2.00AJ Spring 2009 course staff.
   image-alt: A student adjusts the fishbowl helmet of a student's astronaut suit.
+learning_resource_types: []
+ocw_type: OCWImage
+parent_title: Study Materials
+parent_type: CourseSection
 resourcetype: Image
 title: Getting suited up.
 uid: 1b10f608-8f5f-bbd4-8194-7062a997a58d
