--- a/content/resources/10.md
+++ b/content/resources/10.md
@@ -2,13 +2,18 @@
 content_type: resource
 description: Once in the water, students attempt to steer the robot around, dive to
   the bottom, and gather data.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/2b22af1141cc7f141938116126cb8c6e_10.jpg
+file: /media/courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/2b22af1141cc7f141938116126cb8c6e_10.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Once in the water, students attempt to steer the robot around, dive to
     the bottom, and gather data.
   credit: 'Credit: Image courtesy of 2.00AJ Spring 2009 course staff.'
   image-alt: One student uses a control pad to drive the robot around the pool.
+learning_resource_types:
+- Labs
+ocw_type: OCWImage
+parent_title: Labs
+parent_type: CourseSection
 resourcetype: Image
 title: 10.jpg
 uid: 2b22af11-41cc-7f14-1938-116126cb8c6e
