--- a/content/resources/12.md
+++ b/content/resources/12.md
@@ -2,12 +2,17 @@
 content_type: resource
 description: Repairs to the robot structure or electronics may be necessary after
   testing.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/365bce6e8357a07d939a271972558376_12.jpg
+file: /media/courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/365bce6e8357a07d939a271972558376_12.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Repairs to the robot structure or electronics may be necessary after testing.
   credit: 'Credit: Image courtesy of 2.00AJ Spring 2009 course staff.'
   image-alt: Students use pliers and wire to fix their robot.
+learning_resource_types:
+- Labs
+ocw_type: OCWImage
+parent_title: Labs
+parent_type: CourseSection
 resourcetype: Image
 title: 12.jpg
 uid: 365bce6e-8357-a07d-939a-271972558376
