--- a/content/resources/15.md
+++ b/content/resources/15.md
@@ -1,12 +1,16 @@
 ---
 content_type: resource
 description: Two students pose with their robot, The Winged Avenger.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/02154c0b6e8e49be55501ce9f96b36b1_15.jpg
+file: /media/courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/02154c0b6e8e49be55501ce9f96b36b1_15.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Two students pose with their robot, The Winged Avenger.
   credit: 'Credit: Image courtesy of 2.00AJ Spring 2009 course staff.'
   image-alt: The typical cubic frame is augmented with wings for added stability.
+learning_resource_types: []
+ocw_type: OCWImage
+parent_title: River Testing Photos
+parent_type: CourseSection
 resourcetype: Image
 title: 15.jpg
 uid: 02154c0b-6e8e-49be-5550-1ce9f96b36b1
