--- a/content/resources/2-00ajs09-th.md
+++ b/content/resources/2-00ajs09-th.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: New image Upload
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/fdd772ca7d1767bb2ac425bd80695e9a_2-00ajs09-th.jpg
+file: /media/courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/fdd772ca7d1767bb2ac425bd80695e9a_2-00ajs09-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Student-designed remotely operated vehicles map the "ocean floor." (Image
@@ -9,6 +9,8 @@ image_metadata:
   credit: ''
   image-alt: Students attempt to maneuver their robot into a garbage can anchored
     on its side on the bottom of the pool.
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: 2-00ajs09-th.jpg
 uid: fdd772ca-7d17-67bb-2ac4-25bd80695e9a
