--- a/content/resources/2.md
+++ b/content/resources/2.md
@@ -1,13 +1,17 @@
 ---
 content_type: resource
 description: Student "astronauts", ready to gather samples from the surface.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/1c69b854f7fff687d900e081a114fbfb_2.jpeg
+file: /media/courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/1c69b854f7fff687d900e081a114fbfb_2.jpeg
 file_type: image/jpeg
 image_metadata:
   caption: Student "astronauts", ready to gather samples from the surface.
   credit: Image courtesy of 2.00AJ Spring 2009 course staff.
   image-alt: Two students are "astronauts" while several others monitor their progress
     with walkie-talkies.
+learning_resource_types: []
+ocw_type: OCWImage
+parent_title: Study Materials
+parent_type: CourseSection
 resourcetype: Image
 title: Student "astronauts", ready to gather samples from the surface.
 uid: 1c69b854-f7ff-f687-d900-e081a114fbfb
