--- a/content/resources/22.md
+++ b/content/resources/22.md
@@ -1,12 +1,16 @@
 ---
 content_type: resource
 description: Before diving, students test the steering at the surface.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/7cabce90069a5018ba2199192ab2a636_22.jpg
+file: /media/courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/7cabce90069a5018ba2199192ab2a636_22.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Before diving, students test the steering at the surface.
   credit: 'Credit: Image courtesy of 2.00AJ Spring 2009 course staff.'
   image-alt: The robot zigzags and turns around at the river surface.
+learning_resource_types: []
+ocw_type: OCWImage
+parent_title: River Testing Photos
+parent_type: CourseSection
 resourcetype: Image
 title: 22.jpg
 uid: 7cabce90-069a-5018-ba21-99192ab2a636
