--- a/content/resources/23.md
+++ b/content/resources/23.md
@@ -1,13 +1,17 @@
 ---
 content_type: resource
 description: Students control the robots from the dock.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/ce0693c3c78f3eb0c6fb7200dce7925e_23.jpg
+file: /media/courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/ce0693c3c78f3eb0c6fb7200dce7925e_23.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Students control the robots from the dock.
   credit: 'Credit: Image courtesy of 2.00AJ Spring 2009 course staff.'
   image-alt: A student watches intently while steering their robot down to the river
     bottom.
+learning_resource_types: []
+ocw_type: OCWImage
+parent_title: River Testing Photos
+parent_type: CourseSection
 resourcetype: Image
 title: 23.jpg
 uid: ce0693c3-c78f-3eb0-c6fb-7200dce7925e
