--- a/content/resources/4.md
+++ b/content/resources/4.md
@@ -1,12 +1,16 @@
 ---
 content_type: resource
 description: The progress of the surface team is tracked back in headquarters.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/3c4aa3b6c11756032154745f2427ba38_4.jpeg
+file: /media/courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/3c4aa3b6c11756032154745f2427ba38_4.jpeg
 file_type: image/jpeg
 image_metadata:
   caption: The progress of the surface team is tracked back in headquarters.
   credit: Image courtesy of 2.00AJ Spring 2009 course staff.
   image-alt: A projected display shows the location of the rovers and astronauts outside.
+learning_resource_types: []
+ocw_type: OCWImage
+parent_title: Study Materials
+parent_type: CourseSection
 resourcetype: Image
 title: The progress of the surface team is tracked back in headquarters.
 uid: 3c4aa3b6-c117-5603-2154-745f2427ba38
