--- a/content/resources/5.md
+++ b/content/resources/5.md
@@ -1,12 +1,16 @@
 ---
 content_type: resource
 description: Astronauts stay in close communication with Mission Control.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/c392300e48c6b29001a86a70a4a45a6b_5.jpeg
+file: /media/courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/c392300e48c6b29001a86a70a4a45a6b_5.jpeg
 file_type: image/jpeg
 image_metadata:
   caption: Astronauts stay in close communication with Mission Control.
   credit: Image courtesy of 2.00AJ Spring 2009 course staff
   image-alt: Crew members in headquarters using computers and walkie-talkies.
+learning_resource_types: []
+ocw_type: OCWImage
+parent_title: Study Materials
+parent_type: CourseSection
 resourcetype: Image
 title: Astronauts stay in close communication with Mission Control.
 uid: c392300e-48c6-b290-01a8-6a70a4a45a6b
