Sync all content

--- a/content/resources/18.md
+++ b/content/resources/18.md
@@ -14,6 +14,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: River Testing Photos
 parent_type: CourseSection
+parent_uid: 0aee0583-c6aa-c4a8-7dde-fb73319a8f26
 resourcetype: Image
 title: 18.jpg
 uid: f00a2b64-78cb-f40f-1de9-597e71274cab
