--- a/content/resources/22.md
+++ b/content/resources/22.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: River Testing Photos
 parent_type: CourseSection
+parent_uid: 0aee0583-c6aa-c4a8-7dde-fb73319a8f26
 resourcetype: Image
 title: 22.jpg
 uid: 7cabce90-069a-5018-ba21-99192ab2a636
