--- a/content/resources/23.md
+++ b/content/resources/23.md
@@ -12,6 +12,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: River Testing Photos
 parent_type: CourseSection
+parent_uid: 0aee0583-c6aa-c4a8-7dde-fb73319a8f26
 resourcetype: Image
 title: 23.jpg
 uid: ce0693c3-c78f-3eb0-c6fb-7200dce7925e
