--- a/content/resources/4.md
+++ b/content/resources/4.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Study Materials
 parent_type: CourseSection
+parent_uid: 303c499b-e5d2-36b1-cde0-bb36d615f4e7
 resourcetype: Image
 title: The progress of the surface team is tracked back in headquarters.
 uid: 3c4aa3b6-c117-5603-2154-745f2427ba38
