--- a/content/resources/07.md
+++ b/content/resources/07.md
@@ -12,6 +12,7 @@ learning_resource_types:
 ocw_type: OCWImage
 parent_title: Labs
 parent_type: CourseSection
+parent_uid: 877f0e43-412d-b8b1-6e5b-2864cf8bf1cc
 resourcetype: Image
 title: 07.jpg
 uid: 0458ed12-abef-c07e-9f24-8ed8cbd96242
