--- a/content/resources/08.md
+++ b/content/resources/08.md
@@ -12,6 +12,7 @@ learning_resource_types:
 ocw_type: OCWImage
 parent_title: Labs
 parent_type: CourseSection
+parent_uid: 877f0e43-412d-b8b1-6e5b-2864cf8bf1cc
 resourcetype: Image
 title: 08.jpg
 uid: 5df24d65-1158-dcff-cd51-819bf4703f19
