--- a/content/resources/09.md
+++ b/content/resources/09.md
@@ -12,6 +12,7 @@ learning_resource_types:
 ocw_type: OCWImage
 parent_title: Labs
 parent_type: CourseSection
+parent_uid: 877f0e43-412d-b8b1-6e5b-2864cf8bf1cc
 resourcetype: Image
 title: 09.jpg
 uid: c7b0914e-8745-5694-6cb2-18751ebacbef
