--- a/content/resources/1.md
+++ b/content/resources/1.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Study Materials
 parent_type: CourseSection
+parent_uid: 303c499b-e5d2-36b1-cde0-bb36d615f4e7
 resourcetype: Image
 title: Getting suited up.
 uid: 1b10f608-8f5f-bbd4-8194-7062a997a58d
