--- a/content/resources/10.md
+++ b/content/resources/10.md
@@ -14,6 +14,7 @@ learning_resource_types:
 ocw_type: OCWImage
 parent_title: Labs
 parent_type: CourseSection
+parent_uid: 877f0e43-412d-b8b1-6e5b-2864cf8bf1cc
 resourcetype: Image
 title: 10.jpg
 uid: 2b22af11-41cc-7f14-1938-116126cb8c6e
