--- a/content/resources/11.md
+++ b/content/resources/11.md
@@ -14,6 +14,7 @@ learning_resource_types:
 ocw_type: OCWImage
 parent_title: Labs
 parent_type: CourseSection
+parent_uid: 877f0e43-412d-b8b1-6e5b-2864cf8bf1cc
 resourcetype: Image
 title: 11.jpg
 uid: 7af53c0e-8a5b-12b9-f408-b5579b3a94c7
