--- a/content/resources/12.md
+++ b/content/resources/12.md
@@ -13,6 +13,7 @@ learning_resource_types:
 ocw_type: OCWImage
 parent_title: Labs
 parent_type: CourseSection
+parent_uid: 877f0e43-412d-b8b1-6e5b-2864cf8bf1cc
 resourcetype: Image
 title: 12.jpg
 uid: 365bce6e-8357-a07d-939a-271972558376
