--- a/content/resources/13.md
+++ b/content/resources/13.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: River Testing Photos
 parent_type: CourseSection
+parent_uid: 0aee0583-c6aa-c4a8-7dde-fb73319a8f26
 resourcetype: Image
 title: 13.jpg
 uid: 4a88eec2-6ee4-3adf-2e7e-29aaa47fc754
