--- a/content/resources/14.md
+++ b/content/resources/14.md
@@ -12,6 +12,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: River Testing Photos
 parent_type: CourseSection
+parent_uid: 0aee0583-c6aa-c4a8-7dde-fb73319a8f26
 resourcetype: Image
 title: 14.jpg
 uid: a26e8186-9d69-1926-9e69-94d1c7513c4d
