--- a/content/resources/15.md
+++ b/content/resources/15.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: River Testing Photos
 parent_type: CourseSection
+parent_uid: 0aee0583-c6aa-c4a8-7dde-fb73319a8f26
 resourcetype: Image
 title: 15.jpg
 uid: 02154c0b-6e8e-49be-5550-1ce9f96b36b1
