--- a/content/resources/17.md
+++ b/content/resources/17.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: River Testing Photos
 parent_type: CourseSection
+parent_uid: 0aee0583-c6aa-c4a8-7dde-fb73319a8f26
 resourcetype: Image
 title: 17.jpg
 uid: be56942d-504f-2784-8ba2-953ffe0d96da
