--- a/content/resources/19.md
+++ b/content/resources/19.md
@@ -14,6 +14,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: River Testing Photos
 parent_type: CourseSection
+parent_uid: 0aee0583-c6aa-c4a8-7dde-fb73319a8f26
 resourcetype: Image
 title: 19.jpg
 uid: bdac4b68-bd3e-1393-0905-8068d63fbe9f
