--- a/content/resources/2.md
+++ b/content/resources/2.md
@@ -12,6 +12,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Study Materials
 parent_type: CourseSection
+parent_uid: 303c499b-e5d2-36b1-cde0-bb36d615f4e7
 resourcetype: Image
 title: Student "astronauts", ready to gather samples from the surface.
 uid: 1c69b854-f7ff-f687-d900-e081a114fbfb
