--- a/content/resources/20.md
+++ b/content/resources/20.md
@@ -13,6 +13,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: River Testing Photos
 parent_type: CourseSection
+parent_uid: 0aee0583-c6aa-c4a8-7dde-fb73319a8f26
 resourcetype: Image
 title: 20.jpg
 uid: 57012d92-6faf-1901-b106-ec77c45f0da7
