--- a/content/resources/21.md
+++ b/content/resources/21.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: River Testing Photos
 parent_type: CourseSection
+parent_uid: 0aee0583-c6aa-c4a8-7dde-fb73319a8f26
 resourcetype: Image
 title: 21.jpg
 uid: 3ae88aef-dc94-5408-db9f-83be645ceb2f
