--- a/content/resources/3.md
+++ b/content/resources/3.md
@@ -12,6 +12,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Study Materials
 parent_type: CourseSection
+parent_uid: 303c499b-e5d2-36b1-cde0-bb36d615f4e7
 resourcetype: Image
 title: Moving in a space suit requires practice.
 uid: a833ce1d-b5f0-b516-5e56-c16be4be4829
