--- a/content/resources/5.md
+++ b/content/resources/5.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Study Materials
 parent_type: CourseSection
+parent_uid: 303c499b-e5d2-36b1-cde0-bb36d615f4e7
 resourcetype: Image
 title: Astronauts stay in close communication with Mission Control.
 uid: c392300e-48c6-b290-01a8-6a70a4a45a6b
