--- a/content/resources/6.md
+++ b/content/resources/6.md
@@ -12,6 +12,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Study Materials
 parent_type: CourseSection
+parent_uid: 303c499b-e5d2-36b1-cde0-bb36d615f4e7
 resourcetype: Image
 title: The crawling robot rover investigates the landscape.
 uid: 0500783a-c1a0-a88b-5753-524354b44410
