Sync all content

--- a/content/resources/15.md
+++ b/content/resources/15.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Two students pose with their robot, The Winged Avenger.
-file: /media/courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/02154c0b6e8e49be55501ce9f96b36b1_15.jpg
+file: /courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/02154c0b6e8e49be55501ce9f96b36b1_15.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Two students pose with their robot, The Winged Avenger.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 15.jpg
 uid: 02154c0b-6e8e-49be-5550-1ce9f96b36b1
 ---
+Two students pose with their robot, The Winged Avenger.
+
