--- a/content/resources/17.md
+++ b/content/resources/17.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Buoys, constructed in Lab 1, help robots achieve neutral buoyancy.
-file: /media/courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/be56942d504f27848ba2953ffe0d96da_17.jpg
+file: /courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/be56942d504f27848ba2953ffe0d96da_17.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Buoys, constructed in Lab 1, help robots achieve neutral buoyancy.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 17.jpg
 uid: be56942d-504f-2784-8ba2-953ffe0d96da
 ---
+Buoys, constructed in Lab 1, help robots achieve neutral buoyancy.
+
