--- a/content/resources/18.md
+++ b/content/resources/18.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: Weights, foam blocks, and buoys are attached to different parts of the
   robot to balance out the motors, lights, and other components.
-file: /media/courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/f00a2b6478cbf40f1de9597e71274cab_18.jpg
+file: /courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/f00a2b6478cbf40f1de9597e71274cab_18.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Weights, foam blocks, and buoys are attached to different parts of the
@@ -19,3 +19,5 @@ resourcetype: Image
 title: 18.jpg
 uid: f00a2b64-78cb-f40f-1de9-597e71274cab
 ---
+Weights, foam blocks, and buoys are attached to different parts of the robot to balance out the motors, lights, and other components.
+
