--- a/content/resources/2-00ajs09-th.md
+++ b/content/resources/2-00ajs09-th.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: New image Upload
-file: /media/courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/fdd772ca7d1767bb2ac425bd80695e9a_2-00ajs09-th.jpg
+file: /courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/fdd772ca7d1767bb2ac425bd80695e9a_2-00ajs09-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Student-designed remotely operated vehicles map the "ocean floor." (Image
@@ -15,3 +15,5 @@ resourcetype: Image
 title: 2-00ajs09-th.jpg
 uid: fdd772ca-7d17-67bb-2ac4-25bd80695e9a
 ---
+New image Upload
+
