--- a/content/resources/22.md
+++ b/content/resources/22.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Before diving, students test the steering at the surface.
-file: /media/courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/7cabce90069a5018ba2199192ab2a636_22.jpg
+file: /courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/7cabce90069a5018ba2199192ab2a636_22.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Before diving, students test the steering at the surface.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 22.jpg
 uid: 7cabce90-069a-5018-ba21-99192ab2a636
 ---
+Before diving, students test the steering at the surface.
+
