--- a/content/resources/23.md
+++ b/content/resources/23.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Students control the robots from the dock.
-file: /media/courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/ce0693c3c78f3eb0c6fb7200dce7925e_23.jpg
+file: /courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/ce0693c3c78f3eb0c6fb7200dce7925e_23.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Students control the robots from the dock.
@@ -17,3 +17,5 @@ resourcetype: Image
 title: 23.jpg
 uid: ce0693c3-c78f-3eb0-c6fb-7200dce7925e
 ---
+Students control the robots from the dock.
+
