--- a/content/resources/3.md
+++ b/content/resources/3.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Moving in a space suit requires practice.
-file: /media/courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/a833ce1db5f0b5165e56c16be4be4829_3.jpeg
+file: /courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/a833ce1db5f0b5165e56c16be4be4829_3.jpeg
 file_type: image/jpeg
 image_metadata:
   caption: Moving in a space suit requires practice.
@@ -17,3 +17,5 @@ resourcetype: Image
 title: Moving in a space suit requires practice.
 uid: a833ce1d-b5f0-b516-5e56-c16be4be4829
 ---
+Moving in a space suit requires practice.
+
