--- a/content/resources/07.md
+++ b/content/resources/07.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Students with their robot, before testing.
-file: /media/courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/0458ed12abefc07e9f248ed8cbd96242_07.jpg
+file: /courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/0458ed12abefc07e9f248ed8cbd96242_07.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Students with their robot, before testing.
@@ -17,3 +17,5 @@ resourcetype: Image
 title: 07.jpg
 uid: 0458ed12-abef-c07e-9f24-8ed8cbd96242
 ---
+Students with their robot, before testing.
+
