--- a/content/resources/08.md
+++ b/content/resources/08.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: A cube-framed robot named Nemo.
-file: /media/courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/5df24d651158dcffcd51819bf4703f19_08.jpg
+file: /courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/5df24d651158dcffcd51819bf4703f19_08.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A cube-framed robot named Nemo.
@@ -17,3 +17,5 @@ resourcetype: Image
 title: 08.jpg
 uid: 5df24d65-1158-dcff-cd51-819bf4703f19
 ---
+A cube-framed robot named Nemo.
+
