--- a/content/resources/09.md
+++ b/content/resources/09.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: An angled profile helps reduce drag.
-file: /media/courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/c7b0914e874556946cb218751ebacbef_09.jpg
+file: /courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/c7b0914e874556946cb218751ebacbef_09.jpg
 file_type: image/jpeg
 image_metadata:
   caption: An angled profile helps reduce drag.
@@ -17,3 +17,5 @@ resourcetype: Image
 title: 09.jpg
 uid: c7b0914e-8745-5694-6cb2-18751ebacbef
 ---
+An angled profile helps reduce drag.
+
