--- a/content/resources/1.md
+++ b/content/resources/1.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Getting suited up.
-file: /media/courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/1b10f6088f5fbbd481947062a997a58d_1.jpeg
+file: /courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/1b10f6088f5fbbd481947062a997a58d_1.jpeg
 file_type: image/jpeg
 image_metadata:
   caption: Getting suited up.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: Getting suited up.
 uid: 1b10f608-8f5f-bbd4-8194-7062a997a58d
 ---
+Getting suited up.
+
