--- a/content/resources/11.md
+++ b/content/resources/11.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: To verify that instrumentation is working correctly, video is transmitted
   and displayed in realtime.
-file: /media/courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/7af53c0e8a5b12b9f408b5579b3a94c7_11.jpg
+file: /courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/7af53c0e8a5b12b9f408b5579b3a94c7_11.jpg
 file_type: image/jpeg
 image_metadata:
   caption: To verify that instrumentation is working correctly, video is transmitted
@@ -19,3 +19,5 @@ resourcetype: Image
 title: 11.jpg
 uid: 7af53c0e-8a5b-12b9-f408-b5579b3a94c7
 ---
+To verify that instrumentation is working correctly, video is transmitted and displayed in realtime.
+
