--- a/content/resources/12.md
+++ b/content/resources/12.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: Repairs to the robot structure or electronics may be necessary after
   testing.
-file: /media/courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/365bce6e8357a07d939a271972558376_12.jpg
+file: /courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/365bce6e8357a07d939a271972558376_12.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Repairs to the robot structure or electronics may be necessary after testing.
@@ -18,3 +18,5 @@ resourcetype: Image
 title: 12.jpg
 uid: 365bce6e-8357-a07d-939a-271972558376
 ---
+Repairs to the robot structure or electronics may be necessary after testing.
+
