--- a/content/resources/13.md
+++ b/content/resources/13.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: One big propeller at the top of this robot helps it operate like a helicopter.
-file: /media/courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/4a88eec26ee43adf2e7e29aaa47fc754_13.jpg
+file: /courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/4a88eec26ee43adf2e7e29aaa47fc754_13.jpg
 file_type: image/jpeg
 image_metadata:
   caption: One big propeller at the top of this robot helps it operate like a helicopter.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 13.jpg
 uid: 4a88eec2-6ee4-3adf-2e7e-29aaa47fc754
 ---
+One big propeller at the top of this robot helps it operate like a helicopter.
+
