--- a/content/resources/14.md
+++ b/content/resources/14.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This robot, the Sea-Saw, has a V-shaped frame.
-file: /media/courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/a26e81869d6919269e6994d1c7513c4d_14.jpg
+file: /courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/a26e81869d6919269e6994d1c7513c4d_14.jpg
 file_type: image/jpeg
 image_metadata:
   caption: This robot, the Sea-Saw, has a V-shaped frame.
@@ -17,3 +17,5 @@ resourcetype: Image
 title: 14.jpg
 uid: a26e8186-9d69-1926-9e69-94d1c7513c4d
 ---
+This robot, the Sea-Saw, has a V-shaped frame.
+
