--- a/content/resources/16.md
+++ b/content/resources/16.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Teams of students prepare their robots for an exploratory mission.
-file: /media/courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/2e105c6284f1a322e5793ee83b0e6da5_16.jpg
+file: /courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/2e105c6284f1a322e5793ee83b0e6da5_16.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Teams of students prepare their robots for an exploratory mission.
@@ -17,3 +17,5 @@ resourcetype: Image
 title: 15.jpg
 uid: 2e105c62-84f1-a322-e579-3ee83b0e6da5
 ---
+Teams of students prepare their robots for an exploratory mission.
+
