--- a/content/resources/19.md
+++ b/content/resources/19.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: The robots receive instructions and transmit data through a long tether
   cable.
-file: /media/courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/bdac4b68bd3e139309058068d63fbe9f_19.jpg
+file: /courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/bdac4b68bd3e139309058068d63fbe9f_19.jpg
 file_type: image/jpeg
 image_metadata:
   caption: The robots receive instructions and transmit data through a long tether
@@ -19,3 +19,5 @@ resourcetype: Image
 title: 19.jpg
 uid: bdac4b68-bd3e-1393-0905-8068d63fbe9f
 ---
+The robots receive instructions and transmit data through a long tether cable.
+
