--- a/content/resources/2.md
+++ b/content/resources/2.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Student "astronauts", ready to gather samples from the surface.
-file: /media/courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/1c69b854f7fff687d900e081a114fbfb_2.jpeg
+file: /courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/1c69b854f7fff687d900e081a114fbfb_2.jpeg
 file_type: image/jpeg
 image_metadata:
   caption: Student "astronauts", ready to gather samples from the surface.
@@ -17,3 +17,5 @@ resourcetype: Image
 title: Student "astronauts", ready to gather samples from the surface.
 uid: 1c69b854-f7ff-f687-d900-e081a114fbfb
 ---
+Student "astronauts", ready to gather samples from the surface.
+
