--- a/content/resources/20.md
+++ b/content/resources/20.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: Sensors and other electronics are sealed inside buoys for protection
   from the water.
-file: /media/courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/57012d926faf1901b106ec77c45f0da7_20.jpg
+file: /courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/57012d926faf1901b106ec77c45f0da7_20.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Sensors and other electronics are sealed inside buoys for protection from
@@ -18,3 +18,5 @@ resourcetype: Image
 title: 20.jpg
 uid: 57012d92-6faf-1901-b106-ec77c45f0da7
 ---
+Sensors and other electronics are sealed inside buoys for protection from the water.
+
