--- a/content/resources/21.md
+++ b/content/resources/21.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: An instrumented buoy is attached and connected to the tether cable.
-file: /media/courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/3ae88aefdc945408db9f83be645ceb2f_21.jpg
+file: /courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/3ae88aefdc945408db9f83be645ceb2f_21.jpg
 file_type: image/jpeg
 image_metadata:
   caption: An instrumented buoy is attached and connected to the tether cable.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 21.jpg
 uid: 3ae88aef-dc94-5408-db9f-83be645ceb2f
 ---
+An instrumented buoy is attached and connected to the tether cable.
+
