--- a/content/resources/4.md
+++ b/content/resources/4.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: The progress of the surface team is tracked back in headquarters.
-file: /media/courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/3c4aa3b6c11756032154745f2427ba38_4.jpeg
+file: /courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/3c4aa3b6c11756032154745f2427ba38_4.jpeg
 file_type: image/jpeg
 image_metadata:
   caption: The progress of the surface team is tracked back in headquarters.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: The progress of the surface team is tracked back in headquarters.
 uid: 3c4aa3b6-c117-5603-2154-745f2427ba38
 ---
+The progress of the surface team is tracked back in headquarters.
+
