--- a/content/resources/5.md
+++ b/content/resources/5.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Astronauts stay in close communication with Mission Control.
-file: /media/courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/c392300e48c6b29001a86a70a4a45a6b_5.jpeg
+file: /courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/c392300e48c6b29001a86a70a4a45a6b_5.jpeg
 file_type: image/jpeg
 image_metadata:
   caption: Astronauts stay in close communication with Mission Control.
@@ -16,3 +16,5 @@ resourcetype: Image
 title: Astronauts stay in close communication with Mission Control.
 uid: c392300e-48c6-b290-01a8-6a70a4a45a6b
 ---
+Astronauts stay in close communication with Mission Control.
+
