--- a/content/resources/6.md
+++ b/content/resources/6.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: The crawling robot rover investigates the landscape.
-file: /media/courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/0500783ac1a0a88b5753524354b44410_6.jpeg
+file: /courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/0500783ac1a0a88b5753524354b44410_6.jpeg
 file_type: image/jpeg
 image_metadata:
   caption: The crawling robot rover investigates the landscape.
@@ -17,3 +17,5 @@ resourcetype: Image
 title: The crawling robot rover investigates the landscape.
 uid: 0500783a-c1a0-a88b-5753-524354b44410
 ---
+The crawling robot rover investigates the landscape.
+
