Sync all content

--- a/content/resources/07.md
+++ b/content/resources/07.md
@@ -9,6 +9,7 @@ image_metadata:
   image-alt: Two students posing with a cube-framed robot at the edge of the pool.
 learning_resource_types:
 - Labs
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Labs
 parent_type: CourseSection
@@ -18,4 +19,3 @@ title: 07.jpg
 uid: 0458ed12-abef-c07e-9f24-8ed8cbd96242
 ---
 Students with their robot, before testing.
-
