--- a/content/resources/08.md
+++ b/content/resources/08.md
@@ -9,6 +9,7 @@ image_metadata:
   image-alt: Two students with their robot and coiled-up tether.
 learning_resource_types:
 - Labs
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Labs
 parent_type: CourseSection
@@ -18,4 +19,3 @@ title: 08.jpg
 uid: 5df24d65-1158-dcff-cd51-819bf4703f19
 ---
 A cube-framed robot named Nemo.
-
