--- a/content/resources/09.md
+++ b/content/resources/09.md
@@ -9,6 +9,7 @@ image_metadata:
   image-alt: Two students whose robot has a sloping top.
 learning_resource_types:
 - Labs
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Labs
 parent_type: CourseSection
@@ -18,4 +19,3 @@ title: 09.jpg
 uid: c7b0914e-8745-5694-6cb2-18751ebacbef
 ---
 An angled profile helps reduce drag.
-
