--- a/content/resources/1.md
+++ b/content/resources/1.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Image courtesy of 2.00AJ Spring 2009 course staff.
   image-alt: A student adjusts the fishbowl helmet of a student's astronaut suit.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Study Materials
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: Getting suited up.
 uid: 1b10f608-8f5f-bbd4-8194-7062a997a58d
 ---
 Getting suited up.
-
