--- a/content/resources/11.md
+++ b/content/resources/11.md
@@ -11,6 +11,7 @@ image_metadata:
   image-alt: The video from the robot's camera is displayed on a CRT.
 learning_resource_types:
 - Labs
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Labs
 parent_type: CourseSection
@@ -20,4 +21,3 @@ title: 11.jpg
 uid: 7af53c0e-8a5b-12b9-f408-b5579b3a94c7
 ---
 To verify that instrumentation is working correctly, video is transmitted and displayed in realtime.
-
