--- a/content/resources/13.md
+++ b/content/resources/13.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: 'Credit: Image courtesy of 2.00AJ Spring 2009 course staff.'
   image-alt: A sphere-bodied robot with a propeller hovers near the river surface.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: River Testing Photos
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 13.jpg
 uid: 4a88eec2-6ee4-3adf-2e7e-29aaa47fc754
 ---
 One big propeller at the top of this robot helps it operate like a helicopter.
-
