--- a/content/resources/14.md
+++ b/content/resources/14.md
@@ -9,6 +9,7 @@ image_metadata:
   image-alt: With one propeller at the end of each arm, the robot drives point-first
     through the water.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: River Testing Photos
 parent_type: CourseSection
@@ -18,4 +19,3 @@ title: 14.jpg
 uid: a26e8186-9d69-1926-9e69-94d1c7513c4d
 ---
 This robot, the Sea-Saw, has a V-shaped frame.
-
