--- a/content/resources/17.md
+++ b/content/resources/17.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: 'Credit: Image courtesy of 2.00AJ Spring 2009 course staff.'
   image-alt: Four PVC pipe buoys are attached to this robot's frame.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: River Testing Photos
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 17.jpg
 uid: be56942d-504f-2784-8ba2-953ffe0d96da
 ---
 Buoys, constructed in Lab 1, help robots achieve neutral buoyancy.
-
