--- a/content/resources/18.md
+++ b/content/resources/18.md
@@ -11,6 +11,7 @@ image_metadata:
   image-alt: The hollow buoys are placed across from each other on two sides of the
     frame; 2 foam blocks add extra flotation on two other opposing sides.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: River Testing Photos
 parent_type: CourseSection
@@ -20,4 +21,3 @@ title: 18.jpg
 uid: f00a2b64-78cb-f40f-1de9-597e71274cab
 ---
 Weights, foam blocks, and buoys are attached to different parts of the robot to balance out the motors, lights, and other components.
-
