--- a/content/resources/2-00ajs09-th.md
+++ b/content/resources/2-00ajs09-th.md
@@ -10,10 +10,10 @@ image_metadata:
   image-alt: Students attempt to maneuver their robot into a garbage can anchored
     on its side on the bottom of the pool.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 2-00ajs09-th.jpg
 uid: fdd772ca-7d17-67bb-2ac4-25bd80695e9a
 ---
 New image Upload
-
