--- a/content/resources/2.md
+++ b/content/resources/2.md
@@ -9,6 +9,7 @@ image_metadata:
   image-alt: Two students are "astronauts" while several others monitor their progress
     with walkie-talkies.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Study Materials
 parent_type: CourseSection
@@ -18,4 +19,3 @@ title: Student "astronauts", ready to gather samples from the surface.
 uid: 1c69b854-f7ff-f687-d900-e081a114fbfb
 ---
 Student "astronauts", ready to gather samples from the surface.
-
