--- a/content/resources/20.md
+++ b/content/resources/20.md
@@ -10,6 +10,7 @@ image_metadata:
   credit: 'Credit: Image courtesy of 2.00AJ Spring 2009 course staff.'
   image-alt: A student repairs electronics stored inside a PVC buoy.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: River Testing Photos
 parent_type: CourseSection
@@ -19,4 +20,3 @@ title: 20.jpg
 uid: 57012d92-6faf-1901-b106-ec77c45f0da7
 ---
 Sensors and other electronics are sealed inside buoys for protection from the water.
-
