--- a/content/resources/21.md
+++ b/content/resources/21.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: 'Credit: Image courtesy of 2.00AJ Spring 2009 course staff.'
   image-alt: A student attaches the PVC buoy to the robot with a metal hose clamp.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: River Testing Photos
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 21.jpg
 uid: 3ae88aef-dc94-5408-db9f-83be645ceb2f
 ---
 An instrumented buoy is attached and connected to the tether cable.
-
