--- a/content/resources/22.md
+++ b/content/resources/22.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: 'Credit: Image courtesy of 2.00AJ Spring 2009 course staff.'
   image-alt: The robot zigzags and turns around at the river surface.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: River Testing Photos
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 22.jpg
 uid: 7cabce90-069a-5018-ba21-99192ab2a636
 ---
 Before diving, students test the steering at the surface.
-
