--- a/content/resources/23.md
+++ b/content/resources/23.md
@@ -9,6 +9,7 @@ image_metadata:
   image-alt: A student watches intently while steering their robot down to the river
     bottom.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: River Testing Photos
 parent_type: CourseSection
@@ -18,4 +19,3 @@ title: 23.jpg
 uid: ce0693c3-c78f-3eb0-c6fb-7200dce7925e
 ---
 Students control the robots from the dock.
-
