--- a/content/resources/4.md
+++ b/content/resources/4.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Image courtesy of 2.00AJ Spring 2009 course staff.
   image-alt: A projected display shows the location of the rovers and astronauts outside.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Study Materials
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: The progress of the surface team is tracked back in headquarters.
 uid: 3c4aa3b6-c117-5603-2154-745f2427ba38
 ---
 The progress of the surface team is tracked back in headquarters.
-
