--- a/content/resources/5.md
+++ b/content/resources/5.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: Image courtesy of 2.00AJ Spring 2009 course staff
   image-alt: Crew members in headquarters using computers and walkie-talkies.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Study Materials
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: Astronauts stay in close communication with Mission Control.
 uid: c392300e-48c6-b290-01a8-6a70a4a45a6b
 ---
 Astronauts stay in close communication with Mission Control.
-
