--- a/content/resources/10.md
+++ b/content/resources/10.md
@@ -11,6 +11,7 @@ image_metadata:
   image-alt: One student uses a control pad to drive the robot around the pool.
 learning_resource_types:
 - Labs
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Labs
 parent_type: CourseSection
@@ -20,4 +21,3 @@ title: 10.jpg
 uid: 2b22af11-41cc-7f14-1938-116126cb8c6e
 ---
 Once in the water, students attempt to steer the robot around, dive to the bottom, and gather data.
-
