--- a/content/resources/12.md
+++ b/content/resources/12.md
@@ -10,6 +10,7 @@ image_metadata:
   image-alt: Students use pliers and wire to fix their robot.
 learning_resource_types:
 - Labs
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Labs
 parent_type: CourseSection
@@ -19,4 +20,3 @@ title: 12.jpg
 uid: 365bce6e-8357-a07d-939a-271972558376
 ---
 Repairs to the robot structure or electronics may be necessary after testing.
-
