--- a/content/resources/15.md
+++ b/content/resources/15.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: 'Credit: Image courtesy of 2.00AJ Spring 2009 course staff.'
   image-alt: The typical cubic frame is augmented with wings for added stability.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: River Testing Photos
 parent_type: CourseSection
@@ -17,4 +18,3 @@ title: 15.jpg
 uid: 02154c0b-6e8e-49be-5550-1ce9f96b36b1
 ---
 Two students pose with their robot, The Winged Avenger.
-
