--- a/content/resources/16.md
+++ b/content/resources/16.md
@@ -9,6 +9,7 @@ image_metadata:
   image-alt: Students on the dock maneuver their robots around, make adjustments before
     launch, and watch each others' progress.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: River Testing Photos
 parent_type: CourseSection
@@ -18,4 +19,3 @@ title: 15.jpg
 uid: 2e105c62-84f1-a322-e579-3ee83b0e6da5
 ---
 Teams of students prepare their robots for an exploratory mission.
-
