--- a/content/resources/19.md
+++ b/content/resources/19.md
@@ -11,6 +11,7 @@ image_metadata:
   image-alt: The multi-stranded tether coils up on the dock as a student hauls in
     the robot.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: River Testing Photos
 parent_type: CourseSection
@@ -20,4 +21,3 @@ title: 19.jpg
 uid: bdac4b68-bd3e-1393-0905-8068d63fbe9f
 ---
 The robots receive instructions and transmit data through a long tether cable.
-
