--- a/content/resources/2-00ajs09.md
+++ b/content/resources/2-00ajs09.md
@@ -10,6 +10,7 @@ image_metadata:
   image-alt: Students attempt to maneuver their robot into a garbage can anchored
     on its side on the bottom of the pool.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 2-00ajs09.jpg
