--- a/content/resources/3.md
+++ b/content/resources/3.md
@@ -9,6 +9,7 @@ image_metadata:
   image-alt: One astronaut and one crew member practice loping along the sidewalk
     while communicating via walkie-talkie.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Study Materials
 parent_type: CourseSection
@@ -18,4 +19,3 @@ title: Moving in a space suit requires practice.
 uid: a833ce1d-b5f0-b516-5e56-c16be4be4829
 ---
 Moving in a space suit requires practice.
-
