--- a/content/resources/6.md
+++ b/content/resources/6.md
@@ -9,6 +9,7 @@ image_metadata:
   image-alt: Close-up of the red crawler robot with a sensor attached to the front,
     moving across pebbles.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Study Materials
 parent_type: CourseSection
@@ -18,4 +19,3 @@ title: The crawling robot rover investigates the landscape.
 uid: 0500783a-c1a0-a88b-5753-524354b44410
 ---
 The crawling robot rover investigates the landscape.
-
