Sync all content

--- a/content/resources/07.md
+++ b/content/resources/07.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: Students with their robot, before testing.
 file: /courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/0458ed12abefc07e9f248ed8cbd96242_07.jpg
+file_size: 94458
 file_type: image/jpeg
 image_metadata:
   caption: Students with their robot, before testing.
