--- a/content/resources/11.md
+++ b/content/resources/11.md
@@ -3,6 +3,7 @@ content_type: resource
 description: To verify that instrumentation is working correctly, video is transmitted
   and displayed in realtime.
 file: /courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/7af53c0e8a5b12b9f408b5579b3a94c7_11.jpg
+file_size: 96565
 file_type: image/jpeg
 image_metadata:
   caption: To verify that instrumentation is working correctly, video is transmitted
