--- a/content/resources/14.md
+++ b/content/resources/14.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: This robot, the Sea-Saw, has a V-shaped frame.
 file: /courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/a26e81869d6919269e6994d1c7513c4d_14.jpg
+file_size: 61425
 file_type: image/jpeg
 image_metadata:
   caption: This robot, the Sea-Saw, has a V-shaped frame.
