--- a/content/resources/15.md
+++ b/content/resources/15.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: Two students pose with their robot, The Winged Avenger.
 file: /courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/02154c0b6e8e49be55501ce9f96b36b1_15.jpg
+file_size: 96567
 file_type: image/jpeg
 image_metadata:
   caption: Two students pose with their robot, The Winged Avenger.
