--- a/content/resources/16.md
+++ b/content/resources/16.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: Teams of students prepare their robots for an exploratory mission.
 file: /courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/2e105c6284f1a322e5793ee83b0e6da5_16.jpg
+file_size: 103470
 file_type: image/jpeg
 image_metadata:
   caption: Teams of students prepare their robots for an exploratory mission.
