--- a/content/resources/19.md
+++ b/content/resources/19.md
@@ -3,6 +3,7 @@ content_type: resource
 description: The robots receive instructions and transmit data through a long tether
   cable.
 file: /courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/bdac4b68bd3e139309058068d63fbe9f_19.jpg
+file_size: 108277
 file_type: image/jpeg
 image_metadata:
   caption: The robots receive instructions and transmit data through a long tether
