--- a/content/resources/6.md
+++ b/content/resources/6.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: The crawling robot rover investigates the landscape.
 file: /courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/0500783ac1a0a88b5753524354b44410_6.jpeg
+file_size: 161684
 file_type: image/jpeg
 image_metadata:
   caption: The crawling robot rover investigates the landscape.
