--- a/content/resources/08.md
+++ b/content/resources/08.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: A cube-framed robot named Nemo.
 file: /courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/5df24d651158dcffcd51819bf4703f19_08.jpg
+file_size: 105517
 file_type: image/jpeg
 image_metadata:
   caption: A cube-framed robot named Nemo.
