--- a/content/resources/1.md
+++ b/content/resources/1.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: Getting suited up.
 file: /courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/1b10f6088f5fbbd481947062a997a58d_1.jpeg
+file_size: 84333
 file_type: image/jpeg
 image_metadata:
   caption: Getting suited up.
