--- a/content/resources/2-00ajs09-th.md
+++ b/content/resources/2-00ajs09-th.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: New image Upload
 file: /courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/fdd772ca7d1767bb2ac425bd80695e9a_2-00ajs09-th.jpg
+file_size: 7644
 file_type: image/jpeg
 image_metadata:
   caption: Student-designed remotely operated vehicles map the "ocean floor." (Image
