--- a/content/resources/21.md
+++ b/content/resources/21.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: An instrumented buoy is attached and connected to the tether cable.
 file: /courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/3ae88aefdc945408db9f83be645ceb2f_21.jpg
+file_size: 95443
 file_type: image/jpeg
 image_metadata:
   caption: An instrumented buoy is attached and connected to the tether cable.
