--- a/content/resources/4.md
+++ b/content/resources/4.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: The progress of the surface team is tracked back in headquarters.
 file: /courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/3c4aa3b6c11756032154745f2427ba38_4.jpeg
+file_size: 74038
 file_type: image/jpeg
 image_metadata:
   caption: The progress of the surface team is tracked back in headquarters.
