Sync all content

--- a/content/resources/07.md
+++ b/content/resources/07.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Students with their robot, before testing.
-file: /courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/0458ed12abefc07e9f248ed8cbd96242_07.jpg
+file: /ol-ocw-studio-app/courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/0458ed12abefc07e9f248ed8cbd96242_07.jpg
 file_size: 94458
 file_type: image/jpeg
 image_metadata:
@@ -9,7 +9,7 @@ image_metadata:
   credit: 'Credit: Image courtesy of 2.00AJ Spring 2009 course staff.'
   image-alt: Two students posing with a cube-framed robot at the edge of the pool.
 learning_resource_types:
-- Labs
+- Laboratory Assignments
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Labs
