--- a/content/resources/08.md
+++ b/content/resources/08.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: A cube-framed robot named Nemo.
-file: /courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/5df24d651158dcffcd51819bf4703f19_08.jpg
+file: /ol-ocw-studio-app/courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/5df24d651158dcffcd51819bf4703f19_08.jpg
 file_size: 105517
 file_type: image/jpeg
 image_metadata:
@@ -9,7 +9,7 @@ image_metadata:
   credit: 'Credit: Image courtesy of 2.00AJ Spring 2009 course staff.'
   image-alt: Two students with their robot and coiled-up tether.
 learning_resource_types:
-- Labs
+- Laboratory Assignments
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Labs
