--- a/content/resources/09.md
+++ b/content/resources/09.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: An angled profile helps reduce drag.
-file: /courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/c7b0914e874556946cb218751ebacbef_09.jpg
+file: /ol-ocw-studio-app/courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/c7b0914e874556946cb218751ebacbef_09.jpg
 file_size: 109559
 file_type: image/jpeg
 image_metadata:
@@ -9,7 +9,7 @@ image_metadata:
   credit: 'Credit: Image courtesy of 2.00AJ Spring 2009 course staff.'
   image-alt: Two students whose robot has a sloping top.
 learning_resource_types:
-- Labs
+- Laboratory Assignments
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Labs
