--- a/content/resources/12.md
+++ b/content/resources/12.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: Repairs to the robot structure or electronics may be necessary after
   testing.
-file: /courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/365bce6e8357a07d939a271972558376_12.jpg
+file: /ol-ocw-studio-app/courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/365bce6e8357a07d939a271972558376_12.jpg
 file_size: 94037
 file_type: image/jpeg
 image_metadata:
@@ -10,7 +10,7 @@ image_metadata:
   credit: 'Credit: Image courtesy of 2.00AJ Spring 2009 course staff.'
   image-alt: Students use pliers and wire to fix their robot.
 learning_resource_types:
-- Labs
+- Laboratory Assignments
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Labs
