--- a/content/resources/10.md
+++ b/content/resources/10.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: Once in the water, students attempt to steer the robot around, dive to
   the bottom, and gather data.
-file: /courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/2b22af1141cc7f141938116126cb8c6e_10.jpg
+file: /ol-ocw-studio-app/courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/2b22af1141cc7f141938116126cb8c6e_10.jpg
 file_size: 99420
 file_type: image/jpeg
 image_metadata:
@@ -11,7 +11,7 @@ image_metadata:
   credit: 'Credit: Image courtesy of 2.00AJ Spring 2009 course staff.'
   image-alt: One student uses a control pad to drive the robot around the pool.
 learning_resource_types:
-- Labs
+- Laboratory Assignments
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Labs
