--- a/content/resources/11.md
+++ b/content/resources/11.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: To verify that instrumentation is working correctly, video is transmitted
   and displayed in realtime.
-file: /courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/7af53c0e8a5b12b9f408b5579b3a94c7_11.jpg
+file: /ol-ocw-studio-app/courses/2-00aj-exploring-sea-space-earth-fundamentals-of-engineering-design-spring-2009/7af53c0e8a5b12b9f408b5579b3a94c7_11.jpg
 file_size: 96565
 file_type: image/jpeg
 image_metadata:
@@ -11,7 +11,7 @@ image_metadata:
   credit: 'Credit: Image courtesy of 2.00AJ Spring 2009 course staff.'
   image-alt: The video from the robot's camera is displayed on a CRT.
 learning_resource_types:
-- Labs
+- Laboratory Assignments
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 parent_title: Labs
